# crosslang

./: .gitignore  Cargo.toml  build.rs
crosslangnet/: crosslangnet.sln
crosslangnet/Testing/: Program.cs  Testing.csproj
crosslangnet/crosslangnet/: DotnetInteropResultLong.cs  DotnetInteropResultReturnValue.cs  FunctionParameter.cs  MethodInvocationAgent.cs  ReturnValue.cs  UnmanagedEntrypoint.cs  crosslangnet.csproj
crosslangnet/crosslangnet/Tests/: AddTest.cs
src/: dotnet.rs  lib.rs  tests.rs
