[package]
name = "crosslang"
version = "0.1.0"
edition = "2021"

[lib]
# name = "crosslang"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
jni-mangle = "0.1.2"
netcorehost = { version = "0.17.0", features = ["net8_0"] }
